Dev (#200)
* Modulo5 (#107)

* visualizacion de los turnos asignados para el capitan y una vista para coordinador con los turnos organizados

* quitar comentarios

---------

Co-authored-by: alexcalvo0101 <alejandrocalvoaguilar00@gmail.com>

* Add Excel export functionality and related UI elements

* Fixed bugs

* Modulo6 (#108)

* Pequeños cambios

* Add Excel export functionality and related UI elements

* Fixed bugs

* Hecho gestion de voluntarios de entidad colaboradora sin login

* Añadido header en todos los archivos

* Quitado voluntarios próximamente

* Quitado voluntarios próximamente (#109)

* Añadida una funcionalidad nueva

* Refactorizacion inicial general

* Creadas guias en markdown con el temario dado para que la ia no haga cosas raras

* Refactorizadas variables en commons.css, retiradas etiquetas prohibidas que no sabemos que hacen. Eliminada duplicacion de propiedades.
Quitados @import

* Mejorado boton de exportar y ya no sale borde feo en el login

* Mejorado y arreglado funcionamiento de tabla users de admin

* Eliminado muchos styles en html, otra sintaxis para responsive, y extraidos handlers del html

* Cambiado uso de innerHTML a createElement y appendChild

* Refactorizado todos los innerHTML que quedaban  en javascript

* Gilipolleces

* Mierdecillas

* Mierdecillas (#113)

* Refactor

* Refactor (#114)

Co-authored-by: alexcalvo0101 <alejandrocalvoaguilar00@gmail.com>

* Refactor

* Refactor muchas cosas

* Refactor express

* Refactorizacion gestion cadenas, tiendas y usuarios

* Refactor

* Chains (#123)

* Refactor de nombres de campanas y comentarios de mi parte

* Refactor de nombres de campanas y comentarios de mi parte

* Refactor de nombres de campanas y comentarios de mi parte

* TODO en react en collaborator.html

* Arreglo tontorron

* Mas cambios en roles para edit

* Creada bases de react para comenzar a trabajar

* Bases de react (#128)

* Dev (#127)

* Comienzo modulo 2 tras configuracion del entorno

* Comienzo modulo 2 t