@@ -1,25 +1,28 @@
+/**
+ * Autores:
+ * - Alfonso Ramos Rojas: 85%
+ * - IA Generativa: 15%
+ */
 package es.grupo8.backend.services;
 
-import es.grupo8.backend.dao.CampaignRepository;
 import es.grupo8.backend.dao.PartnerEntityRepository;
+import es.grupo8.backend.dao.UserRepository;
 import es.grupo8.backend.dao.VolunteerRepository;
 import es.grupo8.backend.dao.VolunteerShiftRepository;
+import es.grupo8.backend.dto.CampaignInfoDto;
 import es.grupo8.backend.dto.VoluntarioRequestDto;
 import es.grupo8.backend.dto.VoluntarioResponseDto;
-import es.grupo8.backend.dto.VoluntarioResponseDto.CampaignInfo;
 import es.grupo8.backend.entity.Campaign;
 import es.grupo8.backend.entity.PartnerEntity;
 import es.grupo8.backend.entity.Volunteer;
-import es.grupo8.backend.entity.VolunteerShift;
-import es.grupo8.backend.entity.VolunteerShiftId;
+import es.grupo8.backend.mapper.CampaignInfoMapper;
+import es.grupo8.backend.mapper.VolunteerMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
+import java.util.NoSuchElementException;
 
 @Service
 public class VolunteerService {
@@ -28,31 +31,43 @@ public class VolunteerService {
     private VolunteerRepository volunteerRepository;
 
     @Autowired
-    private PartnerEntityRepository partnerEntityRepository;
-
-    @Autowired
-    private CampaignRepository campaignRepository;
+    private VolunteerMapper volunteerMapper;
 
     @Autowired
     private VolunteerShiftRepository volunteerShiftRepository;
 
+    @Autowired
+    private CampaignInfoMapper campaignInfoMapper;
+
+    @Autowired
+    private PartnerEntityRepository partnerEntityRepository;
+
+    @Autowired
+    private UserRepository userRepository;
+
     public List<VoluntarioResponseDto> getVolunteersByEntity(Integer partnerEntityId) {
         List<Volunteer> volunteers = volunteerRepository.findByIdPartnerEntity_Id(partnerEntityId);
-        return volunteers.stream()
-                .map(this::toResponseDto)
-                .collect(Collectors.toList());
+        return volunteerMapper.toDTOList(volunteers);
+    }
+
+    public List<CampaignInfoDto> getCampaignsByEntity(Integer partnerEntityId) {
+        List<Campaign> campaigns = volunteerShiftRepository.findCampaignsByEntityId(partnerEntityId);
+        return campaigns.stream().map(c -> {
+            long count = volunteerShiftRepository.countVolunteersInCampaignByEntity(c.getId(), partnerEntityId);
+            return campaignInfoMapper.toDTO(c, count);
+        }).toList();
     }
 
     public VoluntarioResponseDto getVolunteerById(Integer id, Integer partnerEntityId) {
         Volunteer volunteer = volunteerRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Volunteer not found with ID: " + id));
+                .orElseThrow(() -> new NoSuchElementException("Volunteer not found with ID: " + id));
 
         if (volunteer.getIdPartnerEntity() == null ||
             !volunteer.getIdPartnerEntity().getId().equals(partnerEntityId)) {
-            throw new RuntimeException("Volunteer not found for this entity");
+            throw new NoSuchElementException("Volunteer not found for this entity");
         }
 
-        return toResponseDto(volunteer);
+        return volunteerMapper.toDTO(volunteer);
     }
 
     @Transactional
@@ -60,17 +75,17 @@ public class VolunteerService {
         validateRequest(request);
 
         PartnerEntity partnerEntity = partnerEntityRepository.findById(partnerEntityId)
-                .orElseThrow(() -> new RuntimeException("Partner entity not found with ID: " + partnerEntityId));
+                .orElseThrow(() -> new NoSuchElementException("Partner entity not found with ID: " + partnerEntityId));
 
         Volunteer volunteer = new Volunteer();
-        volunteer.setName(trimToNull(request.name()));
-        volunteer.setPhone(normalizePhone(request.phone()));
-        volunteer.setEmail(trimToNull(request.email()));
-        volunteer.setAddress(trimToNull(request.address()));
+        volunteer.setName(UtilsService.trimToNull(request.name()));
+        volunteer.setPhone(UtilsService.normalizePhone(request.phone()));
+        volunteer.setEmail(UtilsService.trimToNull(request.email()));
+        volunteer.setAddress(UtilsService.trimToNull(request.address()));
         volunteer.setIdPartnerEntity(partnerEntity);
 
         Volunteer savedVolunteer = volunteerRepository.save(volunteer);
-        return toResponseDto(savedVolunteer);
+        return volunteerMapper.toDTO(savedVolunteer);
     }
 
     @Transactional
@@ -78,30 +93,30 @@ public class VolunteerService {
         validateRequest(request);
 
         Volunteer volunteer = volunteerRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Volunteer not found with ID: " + id));
+                .orElseThrow(() -> new NoSuchElementException("Volunteer not found with ID: " + id));
 
         if (volunteer.getIdPartnerEntity() == null ||
             !volunteer.getIdPartnerEntity().getId().equals(partnerEntityId)) {
-            throw new RuntimeException("Volunteer not found for this entity");
+            throw new NoSuchElementException("Volunteer not found for this entity");
         }
 
-        volunteer.setName(trimToNull(request.name()));
-        volunteer.setPhone(normalizePhone(request.phone()));
-        volunteer.setEmail(trimToNull(request.email()));
-        volunteer.setAddress(trimToNull(request.address()));
+        volunteer.setName(UtilsService.trimToNull(request.name()));
+        volunteer.setPhone(UtilsService.normalizePhone(request.phone()));
+        volunteer.setEmail(UtilsService.trimToNull(request.email()));
+        volunteer.setAddress(UtilsService.trimToNull(request.address()));
 
         Volunteer updatedVolunteer = volunteerRepository.save(volunteer);
-        return toResponseDto(updatedVolunteer);
+        return volunteerMapper.toDTO(updatedVolunteer);
     }
 
     @Transactional
     public void deleteVolunteer(Integer id, Integer partnerEntityId) {
         Volunteer volunteer = volunteerRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Volunteer not found with ID: " + id));
+                .orElseThrow(() -> new NoSuchElementException("Volunteer not found with ID: " + id));
 
         if (volunteer.getIdPartnerEntity() == null ||
             !volunteer.getIdPartnerEntity().getId().equals(partnerEntityId)) {
-            throw new RuntimeException("Volunteer not found for this entity");
+            throw new NoSuchElementException("Volunteer not found for this entity");
         }
 
         volunteerRepository.delete(volunteer);
@@ -128,54 +143,11 @@ public class VolunteerService {
         }
     }
 
-    private String trimToNull(String value) {
-        if (value == null) return null;
-        String trimmed = value.trim();
-        return trimmed.isEmpty() ? null : trimmed;
-    }
-
-    private String normalizePhone(String phone) {
-        String trimmed = trimToNull(phone);
-        if (trimmed == null) {
-            return null;
+    public boolean canAccessPartnerEntity(Integer userId, Integer partnerEntityId) {
+        try {
+            return userRepository.isAdmin(userId) || userRepository.isPartnerEntityManagerOfEntity(userId, partnerEntityId);
+        } catch (Exception e) {
+            return false;
         }
-        return trimmed.replaceAll("\\s+", " ");
-    }
-
-    private VoluntarioResponseDto toResponseDto(Volunteer volunteer) {
-        List<CampaignInfo> campaigns = new ArrayList<>();
-
-        Set<VolunteerShift> shifts = volunteer.getVolunteerShifts();
-        if (shifts != null) {
-            Set<Integer> addedCampaignIds = new java.util.HashSet<>();
-            for (VolunteerShift shift : shifts) {
-                if (shift.getCampaignStores() != null &&
-                    shift.getCampaignStores().getIdCampaign() != null) {
-
-                    Campaign campaign = shift.getCampaignStores().getIdCampaign();
-                    if (addedCampaignIds.add(campaign.getId())) {
-                        campaigns.add(new CampaignInfo(campaign.getId(), campaign.getName()));
-                    }
-                }
-            }
-        }
-
-        Integer entityId = null;
-        String entityName = null;
-        if (volunteer.getIdPartnerEntity() != null) {
-            entityId = volunteer.getIdPartnerEntity().getId();
-            entityName = volunteer.getIdPartnerEntity().getName();
-        }
-
-        return new VoluntarioResponseDto(
-                volunteer.getId(),
-                volunteer.getName(),
-                volunteer.getPhone(),
-                volunteer.getEmail(),
-                volunteer.getAddress(),
-                entityId,
-                entityName,
-                campaigns
-        );
     }
 }
